syntax = "proto3";

option go_package = "/activity";

package event;

message EventActivityUpload {
  int64 activity_id = 1;
}
